added intended structure

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <title>Love Running | Website for running lovers all around Dublin</title>
 </head>
 <body>
-    <h1>
-        Hello world!
-    </h1>
+    <header>Header content</header>
+    <section> Main Image</section>
+    <section> Club ethos</section>
+    <section> Running distances, Times and Locations</section>
+    <footer> Social links here</footer>
 </body>
 </html>
