--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
             </h1>
         </a>
         <nav>
-          <ul>
-              <li>
-                  <a href="index.html"> Home</a>
-              </li>
-              <li>
-                  <a href="#"> Gallery</a>
-              </li>
-              <li>
-                  <a href="#"> Sign Up</a>
-              </li>
-          </ul>
+          <ul id="menu">
+            <li>
+                <a href="#"> Sign Up</a>
+            </li>
+            <li>
+                <a href="#"> Gallery</a>
+            </li>
+            <li>
+                <a href="index.html" class="active"> Home</a>
+            </li>
+            </ul>
         </nav>
     </header>
     <section> Main Image</section>
