add hero image and zoom animation for hero image

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
             </ul>
         </nav>
     </header>
-    <section> Main Image</section>
+    <section id="hero-outer">
+        <div id="hero-image"></div>
+    </section>
     <section> Club ethos</section>
     <section> Running distances, Times and Locations</section>
     <footer> Social links here</footer>
